--- a/style.css
+++ b/style.css
@@ -1,21 +1,102 @@
+:root {
+  --accent-color: rgba(147, 197, 114, 0.719);
+  --serif-font: "DM Serif Display", serif;
+  --accent-font: "Prata", serif;
+  --sans-serif-font: "Tajawal", sans-serif;
+}
+
+html {
+  border: 20px solid var(--accent-color);
+}
+
 body {
   text-align: center;
+  padding: 50px 0 30px;
 }
 
 h1 {
-  font-family: "DM Serif Display", serif;
-  font-size: 60px;
-  margin: 50px 0 0;
+  font-family: var(--serif-font);
+  font-size: 64px;
+  margin: 0;
 }
 
 h2 {
-  font-family: "Prata", serif;
-  font-size: 30px;
+  font-family: var(--accent-font);
+  font-size: 28px;
   margin: 0 0 40px;
 }
 
+h3 {
+  font-family: var(--accent-font);
+  font-size: 24px;
+  margin: 0 0 -15px;
+}
+
 p {
-  font-family: "Tajawal", sans-serif;
-  font-size: 20px;
+  font-family: var(--sans-serif-font);
+  font-size: 18px;
+  text-align: justify;
   margin: 0 350px 30px;
+}
+
+a {
+  font-family: var(--sans-serif-font);
+  color: black;
+  margin: 0 10px;
+  font-weight: 600;
+  transition: all 200ms ease-in-out;
+}
+
+a:hover {
+  color: var(--accent-color);
+}
+
+.links {
+  font-family: var(--sans-serif-font);
+  padding: 10px 15px 10px;
+  outline: 0;
+  border: 1px solid rgba(0, 0, 0, 0.452);
+  color: rgba(0, 0, 0, 0.788);
+  cursor: pointer;
+  position: relative;
+  background-color: transparent;
+  text-decoration: none;
+  margin-left: 18px;
+}
+
+.links::after {
+  content: "";
+  background: var(--accent-color);
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+  transition: all 300ms ease-in-out;
+}
+
+.links:hover::after {
+  top: 0px;
+  left: 0px;
+}
+
+.links:hover {
+  color: #000;
+}
+
+img {
+  width: 300px;
+  border: 10px solid #fff;
+  border-radius: 100%;
+  display: block;
+  margin: 0 auto 30px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin: 60px 0;
+  font-size: 24px;
 }
