--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --accent-color: rgba(147, 197, 114, 0.719);
+  --background-color: rgba(128, 128, 128, 0.062);
   --serif-font: "DM Serif Display", serif;
   --accent-font: "Prata", serif;
   --sans-serif-font: "Tajawal", sans-serif;
@@ -7,11 +8,13 @@
 
 html {
   border: 20px solid var(--accent-color);
+  max-height: 100%;
 }
 
 body {
   text-align: center;
-  padding: 50px 0 30px;
+  padding: 80px 0 50px;
+  background: var(--background-color);
 }
 
 h1 {
@@ -36,7 +39,11 @@ p {
   font-family: var(--sans-serif-font);
   font-size: 18px;
   text-align: justify;
-  margin: 0 350px 30px;
+  margin: 0 auto 40px;
+  max-width: 500px;
+  background: rgba(255, 255, 255, 0.596);
+  padding: 30px;
+  border-radius: 5px;
 }
 
 a {
@@ -62,6 +69,7 @@ a:hover {
   background-color: transparent;
   text-decoration: none;
   margin-left: 18px;
+  border-radius: 2px;
 }
 
 .links::after {
@@ -75,6 +83,7 @@ a:hover {
   left: 7px;
   transition: 0.2s;
   transition: all 300ms ease-in-out;
+  border-radius: 2px;
 }
 
 .links:hover::after {
@@ -88,7 +97,7 @@ a:hover {
 
 img {
   width: 300px;
-  border: 10px solid #fff;
+  border: 10px solid transparent;
   border-radius: 100%;
   display: block;
   margin: 0 auto 30px;
@@ -97,6 +106,6 @@ img {
 footer {
   display: flex;
   justify-content: center;
-  margin: 60px 0;
+  margin: 70px 0 0;
   font-size: 24px;
 }
