--- a/style.css
+++ b/style.css
@@ -8,13 +8,36 @@
 
 html {
   border: 20px solid var(--accent-color);
-  max-height: 100%;
 }
 
 body {
   text-align: center;
   padding: 80px 0 50px;
   background: var(--background-color);
+}
+
+.navbar {
+  margin: -80px 0 50px;
+}
+
+.navbar-brand {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  transition: all 300ms ease-in-out;
+}
+
+.navbar-brand:hover {
+  font-size: 15px;
+}
+
+.nav-link {
+  font-family: var(--accent-font);
+  font-size: 12px;
+  transition: all 300ms ease-in-out;
+}
+
+.nav-link:hover {
+  font-size: 13px;
 }
 
 h1 {
@@ -26,13 +49,21 @@ h1 {
 h2 {
   font-family: var(--accent-font);
   font-size: 28px;
-  margin: 0 0 40px;
+  margin: 0;
 }
 
 h3 {
   font-family: var(--accent-font);
   font-size: 24px;
   margin: 0 0 -15px;
+}
+
+.homepage-hero {
+  background: rgba(255, 255, 255, 0.596);
+  border-radius: 5px;
+  max-width: 700px;
+  padding: 20px;
+  margin: 0 auto 30px;
 }
 
 p {
