--- a/style.css
+++ b/style.css
@@ -179,6 +179,13 @@ iframe {
   z-index: 1;
 }
 
+@media (max-width: 340px) {
+  .links {
+    display: flex;
+    margin: 20px 50px;
+  }
+}
+
 @media (max-width: 700px) {
   h1 {
     font-size: 40px;
