--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --accent-color: rgba(147, 197, 114, 0.719);
   --background-color: #d9f0de67;
+  --section-color: #d9f0ded0;
   --serif-font: "DM Serif Display", serif;
   --accent-font: "Prata", serif;
   --sans-serif-font: "Raleway", sans-serif;
@@ -20,6 +21,10 @@ body {
 
 .navbar {
   margin: -80px 0 0;
+}
+
+.navbar-background {
+  background: #eff8f0;
 }
 
 .navbar-brand {
@@ -42,9 +47,13 @@ body {
   font-size: 13px;
 }
 
+.homepage-hero {
+  margin: 200px auto 300px;
+}
+
 .name-image {
-  width: 600px;
-  margin: 5px -30px -20px;
+  width: 800px;
+  margin: 5px -150px -20px;
 }
 
 h1 {
@@ -55,13 +64,13 @@ h1 {
 
 h2 {
   font-family: var(--accent-font);
-  font-size: 26px;
-  margin: 10px 0 0;
+  font-size: 32px;
+  margin: 15px 0 0;
 }
 
 h3 {
   font-family: var(--accent-font);
-  font-size: 26px;
+  font-size: 30px;
   margin: 0 0 -10px;
   font-weight: 600;
 }
@@ -71,22 +80,10 @@ h4 {
   font-size: 50px;
 }
 
-.homepage-hero {
-  background: var(--section-background);
-  border-radius: 5px;
-  max-width: 700px;
-  padding: 200px 80px;
-  margin: 0 auto 50px;
-  /* border-image: url(/media/border.png) 50% round;
-  border-style: solid;
-  border-width: 50px;
-  border-image-outset: 10px; */
-}
-
 p {
   font-size: 18px;
   text-align: justify;
-  background: var(--section-background);
+  background: var(--section-color);
   padding: 50px;
   border-radius: 5px;
 }
@@ -176,7 +173,7 @@ iframe {
 }
 
 .cert-section {
-  background: #d9f0ded0;
+  background: var(--section-color);
   border-radius: 10px;
   margin: 40px 0;
   position: relative;
