Added skills & certificates section

--- a/style.css
+++ b/style.css
@@ -84,13 +84,26 @@ p {
   font-size: 18px;
   text-align: justify;
   background: var(--section-color);
-  padding: 50px;
-  border-radius: 5px;
+  padding: 40px;
+  border-radius: 7px;
 }
 
 .about-me-container {
   margin-top: 50px;
-  margin-bottom: 50px;
+  max-width: 900px;
+}
+
+.me-pic {
+  width: 300px;
+  border: 10px solid transparent;
+  border-radius: 100%;
+}
+
+.skills-section {
+  font-size: 34px;
+  text-align: center;
+  word-spacing: 50px;
+  margin: 30px 0 50px;
 }
 
 a {
@@ -140,12 +153,9 @@ a:hover {
   color: #000;
 }
 
-.me-pic {
-  width: 300px;
-  border: 10px solid transparent;
-  border-radius: 100%;
-  display: block;
-  margin: 0 auto 30px;
+.certs {
+  width: 400px;
+  padding: 10px;
 }
 
 .border-img {
