--- a/style.css
+++ b/style.css
@@ -162,13 +162,6 @@ a:hover {
   transform: rotate(90deg);
 }
 
-footer {
-  display: flex;
-  justify-content: center;
-  margin: 90px 0 0;
-  font-size: 24px;
-}
-
 iframe {
   width: 600px;
   height: 476px;
@@ -265,4 +258,21 @@ iframe {
   .cert-section {
     padding-left: 150px;
   }
+}
+
+.footer {
+  font-size: 23px;
+  width: 40px;
+  position: fixed;
+  bottom: 30%;
+  left: 40px;
+  right: auto;
+  z-index: 10;
+}
+
+.footer2 {
+  display: flex;
+  flex-direction: column;
+  -webkit-box-align: center;
+  align-items: center;
 }
