--- a/style.css
+++ b/style.css
@@ -83,7 +83,6 @@ h4 {
 p {
   font-size: 18px;
   text-align: justify;
-  background: var(--section-color);
   padding: 40px;
   border-radius: 7px;
 }
@@ -91,6 +90,11 @@ p {
 .about-me-container {
   margin-top: 50px;
   max-width: 900px;
+}
+
+.about-section {
+  text-indent: 20px;
+  padding: 50px 30px 0 40px;
 }
 
 .me-pic {
