--- a/style.css
+++ b/style.css
@@ -154,13 +154,17 @@ a:hover {
 }
 
 .home-links {
+  color: rgb(92, 92, 92);
+  font-family: var(--serif-font);
+  font-size: 18px;
+  letter-spacing: 1px;
   padding: 12px;
   width: 220px;
   transition: all 300ms ease-in-out;
   cursor: pointer;
   display: inline-block;
   position: relative;
-  font-style: italic;
+  text-decoration: underline;
 }
 
 .home-links:after {
@@ -173,7 +177,8 @@ a:hover {
 }
 
 .home-links:hover {
-  font-style: normal;
+  font-style: italic;
+  text-decoration: none;
   padding-right: 4px;
   padding-left: 8px;
 }
