--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ h2 {
 
 .about-section {
   text-indent: 20px;
-  padding: 50px 30px 0 40px;
+  padding: 30px 30px 0 40px;
 }
 
 .me-pic {
@@ -296,6 +296,10 @@ mark {
   }
 
   .projects-image {
+    max-width: 200px;
+  }
+
+  .app-image {
     max-width: 200px;
   }
 
