Changed main color

--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
 
 :root {
   --background-color: #d9f0de67;
-  --accent-color: rgba(147, 197, 114, 0.719);
-  /* --section-color: #d9f0ded0; */
+  --accent-color: #9ec2a5;
   --serif-font: "DM Serif Display", serif;
   --accent-font: "Prata", serif;
   --sans-serif-font: "Raleway", sans-serif;
