--- a/style.css
+++ b/style.css
@@ -204,8 +204,13 @@ h2 {
   margin: 30px 0 50px;
 }
 
+.cert-section {
+  display: block;
+  justify-content: center;
+}
+
 .certs {
-  width: 400px;
+  width: 300px;
   padding: 10px;
   margin-bottom: 50px;
 }
@@ -263,7 +268,7 @@ h4 {
 }
 
 mark {
-  background-color: #0080061e;
+  background-color: #339b371e;
   margin: 15px 0;
   line-height: 40px;
 }
